--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
-    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-paper": "^5.9.1",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0"
   },
